--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,19 @@ code {
 .Button:focus {
   background-color: #303f9f;
 }
+
+ /* {
+  content: {
+    top: '52%',
+    left: '50%',
+    right: 'auto',
+    bottom: 'auto',
+    marginRight: '-50%',
+    transform: 'translate(-50%, -50%)',
+    padding: '0',
+    border: 'none',
+    maxWidth: 'calc (100vw - 48px)',
+    maxHeight: 'calc(100vh - 24px)',
+    overflow: 'none',
+  }
+}; */
