--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,6 @@ code {
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
   color: #fff;
@@ -90,3 +89,12 @@ code {
     overflow: 'none',
   }
 }; */
+
+#modal-root{
+  display: flex;
+  max-width: calc(100vw - 48px);
+  gap: 16px; 
+  flex-wrap: wrap; 
+  flex-direction: row;
+  list-style: none;
+}
