--- a/src/index.css
+++ b/src/index.css
@@ -35,15 +35,15 @@ code {
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-  /* z-index: 1200; */
+ z-index: 1200; 
 }
 
 .Modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
   background-color: #fff;
-  width: 200px;
-  height: 200px;
+  width: 600px;
+  height: 400px;
 }
 
 /*
@@ -74,42 +74,13 @@ code {
   background-color: #303f9f;
 }
 
- /* {
-  content: {
-    top: '52%',
-    left: '50%',
-    right: 'auto',
-    bottom: 'auto',
-    marginRight: '-50%',
-    transform: 'translate(-50%, -50%)',
-    padding: '0',
-    border: 'none',
-    maxWidth: 'calc (100vw - 48px)',
-    maxHeight: 'calc(100vh - 24px)',
-    overflow: 'none',
-  }
-}; */
 
- #modal-root{
-  display: flex;
-  max-width: calc(100vw - 48px);
-  gap: 16px; 
-  flex-wrap: wrap; 
-  flex-direction: row;
-  list-style: none;
-} 
 
-/* #modal-root{
-  
-  display: grid;
-  max-width: calc(100vw - 48px);
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-gap: 16px;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-  list-style: none;
-  margin-left: auto;
-  margin-right: auto;
-;
-} */
+
+
+.Modal img {
+  max-width: 100%;
+  /* max-height: 100%; */
+  object-fit: contain;
+  display: block;
+}  
